# SATI-Q

./: Desafío_DATA_LAB_2023.ipynb  LICENSE  README.md
EQUIPO-1/: EDA_datalab2023.Rmd  Grupo 1.pptx
EQUIPO-2/: EQUIPO-2.TXT
EQUIPO-3/: EQUIPO-3.TXT  datalab.ipynb  pyproject.toml
EQUIPO-4/: Desarrollo de un modelo predictivo de mortalidad en.pptx  EQUIPO-4.TXT  output.html
EQUIPO-5/: EQUIPO-5.TXT
EQUIPO-6/: EQUIPO-6.TXT
