[tool.poetry]
name = "datalab"
version = "0.1.0"
description = ""
authors = ["Federico Rosende <federico.daniel.rosende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyterlab = "^4.0.9"
scikit-learn = "^1.3.2"
tensorflow = "^2.15.0"
seaborn = "^0.13.0"
h2o = "^3.44.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
